Added thumbnails to pipeline game gallery. Also moved classes to fix column bug.

--- a/projects/pipelinegame.html
+++ b/projects/pipelinegame.html
@@ -116,8 +116,8 @@
         <div class="container my-5">
             <main>
                 <div class="row">
-                    <div class="col-2">
-                        <div class="sticky-top d-none d-lg-block">
+                    <div class="col-2 d-none d-lg-block">
+                        <div class="sticky-top border-end">
                             <div class="fw-bold py-3">Page Contents</div>
                             <nav id="navbar-tableofcontents" class="flex-column align-items-stretch pe-4">
                                 <nav class="nav nav-pills flex-column">
@@ -160,23 +160,23 @@
                             
                             <div class="row row-cols-2 row-cols-lg-4 g-2 g-lg-3 pt-4 pb-5">
                                 <div class="col">
-                                    <a href="../images/projects/pipelinegame/pipelineGame_2.png" data-toggle="lightbox">
-                                        <img src="../images/projects/pipelinegame/pipelineGame_2.png" class="img-fluid mx-auto d-block rounded" alt="pipelineGame_2.png"/>
+                                    <a href="../images/projects/pipelinegame/pipelineGame_2.png" data-toggle="lightbox" data-gallery="main-gallery">
+                                        <img src="../images/projects/pipelinegame/thumbnails/thumbnail_pipelineGame_2.png" class="img-fluid mx-auto d-block rounded" alt="thumbnail_pipelineGame_2.png"/>
                                     </a>
                                 </div>
                                 <div class="col">
-                                    <a href="../images/projects/pipelinegame/pipelineGame_3.png" data-toggle="lightbox">
-                                        <img src="../images/projects/pipelinegame/pipelineGame_3.png" class="img-fluid mx-auto d-block rounded" alt="pipelineGame_3.png"/>
+                                    <a href="../images/projects/pipelinegame/pipelineGame_3.png" data-toggle="lightbox" data-gallery="main-gallery">
+                                        <img src="../images/projects/pipelinegame/thumbnails/thumbnail_pipelineGame_3.png" class="img-fluid mx-auto d-block rounded" alt="thumbnail_pipelineGame_3.png"/>
                                     </a>
                                 </div>
                                 <div class="col">
-                                    <a href="../images/projects/pipelinegame/pipelineGame_4.png" data-toggle="lightbox">
-                                        <img src="../images/projects/pipelinegame/pipelineGame_4.png" class="img-fluid mx-auto d-block rounded" alt="pipelineGame_4.png"/>
+                                    <a href="../images/projects/pipelinegame/pipelineGame_4.png" data-toggle="lightbox" data-gallery="main-gallery">
+                                        <img src="../images/projects/pipelinegame/thumbnails/thumbnail_pipelineGame_4.png" class="img-fluid mx-auto d-block rounded" alt="thumbnail_pipelineGame_4.png"/>
                                     </a>
                                 </div>
                                 <div class="col">
-                                    <a href="../images/projects/pipelinegame/pipelineGame_5.png" data-toggle="lightbox">
-                                        <img src="../images/projects/pipelinegame/pipelineGame_5.png" class="img-fluid mx-auto d-block rounded" alt="pipelineGame_5.png"/>
+                                    <a href="../images/projects/pipelinegame/pipelineGame_5.png" data-toggle="lightbox" data-gallery="main-gallery">
+                                        <img src="../images/projects/pipelinegame/thumbnails/thumbnail_pipelineGame_5.png" class="img-fluid mx-auto d-block rounded" alt="thumbnail_pipelineGame_5.png"/>
                                     </a>
                                 </div>
                             </div>
