Updated lindolpho page with gallery thumbnails

--- a/projects/lindolphosboxofephemera.html
+++ b/projects/lindolphosboxofephemera.html
@@ -157,22 +157,22 @@
                             <div class="row row-cols-2 row-cols-lg-4 g-2 g-lg-3 pt-4 pb-5 border-bottom">
                                 <div class="col">
                                     <a href="../images/projects/lindolphoboxofephemera/gallery_02.png" data-toggle="lightbox" data-gallery="main-gallery">
-                                        <img src="../images/projects/lindolphoboxofephemera/gallery_02.png" class="img-fluid rounded" alt="gallery_02.png">
+                                        <img src="../images/projects/lindolphoboxofephemera/thumbnails/thumbnail_gallery_02.png" class="img-fluid rounded" alt="thumbnail_gallery_02.png">
                                     </a>
                                 </div>
                                 <div class="col">
                                     <a href="../images/projects/lindolphoboxofephemera/gallery_03.png" data-toggle="lightbox" data-gallery="main-gallery">
-                                        <img src="../images/projects/lindolphoboxofephemera/gallery_03.png" class="img-fluid rounded" alt="gallery_03.png">
+                                        <img src="../images/projects/lindolphoboxofephemera/thumbnails/thumbnail_gallery_03.png" class="img-fluid rounded" alt="thumbnail_gallery_03.png">
                                     </a>
                                 </div>
                                 <div class="col">
                                     <a href="../images/projects/lindolphoboxofephemera/gallery_04.png" data-toggle="lightbox" data-gallery="main-gallery">
-                                        <img src="../images/projects/lindolphoboxofephemera/gallery_04.png" class="img-fluid rounded" alt="gallery_04.png">
+                                        <img src="../images/projects/lindolphoboxofephemera/thumbnails/thumbnail_gallery_04.png" class="img-fluid rounded" alt="thumbnail_gallery_04.png">
                                     </a>
                                 </div>
                                 <div class="col">
                                     <a href="../images/projects/lindolphoboxofephemera/gallery_05.png" data-toggle="lightbox" data-gallery="main-gallery">
-                                        <img src="../images/projects/lindolphoboxofephemera/gallery_05.png" class="img-fluid rounded" alt="gallery_05.png">
+                                        <img src="../images/projects/lindolphoboxofephemera/thumbnails/thumbnail_gallery_05.png" class="img-fluid rounded" alt="thumbnail_gallery_05.png">
                                     </a>
                                 </div>
                             </div>
