Added copy to lindolpho's page

--- a/projects/lindolphosboxofephemera.html
+++ b/projects/lindolphosboxofephemera.html
@@ -121,10 +121,8 @@
                             <div class="fw-bold py-3">Page Contents</div>
                             <nav id="navbar-tableofcontents" class="flex-column align-items-stretch pe-4">
                                 <nav class="nav nav-pills flex-column">
-                                    <a class="nav-link" href="#overview">DuOS</a>
+                                    <a class="nav-link" href="#overview">Lindolpho's Box of Ephemera</a>
                                     <a class="nav-link" href="#about">About</a>
-                                    <a class="nav-link" href="#designing-timed-puzzles">Designing Timed Puzzles</a>
-                                    <a class="nav-link" href="#rite-test">RITE Test</a>
                                 </nav>
                             </nav>
                         </div>
@@ -140,12 +138,11 @@
                             <div class="row py-3">
                                 <div class="col-md-6 pb-3">
                                     <p class="lead">
-                                        DuOS is a <span class="fw-bold">2D puzzle platformer</span> that takes place in a computer-esque world. Follow
-                                        two robots, PLAT and MIA, as they navigate through a scrapyard, evade patrols, and
-                                        escape the grips of destruction. Along their journey, they will encounter a number of
-                                        interesting characters. However, are these characters friends or are they foes?
+                                        Play in English or Portuguese as you visit vignettes of writer Lindolpho Espeschit's life by piecing together a collage of images, letters, and sounds in this short interactive experience.
                                     </p>
-                                    <img src="../images/badges/hidden_heros_jam _2023_300x171.png" width="175px" alt="hidden_heros_jam _2023_300x171.png"/>
+                                    <p class="lead">
+                                        This project is available to play for free on <a href="https://kpustolski.itch.io/lindolphos-box-of-ephemera" class="text-decoration-none">itch.io.</a>
+                                    </p>
                                 </div>
                                 <div class="col">
                                     <a href="../images/projects/lindolphoboxofephemera/gallery_01.png" data-toggle="lightbox">
@@ -178,19 +175,18 @@
                             </div>
                         </div>
 
-                        <div id="about" class="container my-3 py-3 border-bottom">
+                        <div id="about" class="container my-3 py-3">
                             <div class="row">
                                 <h2> About </h2>
                             </div>
-                            <div class="row row-cols-1 row-cols-lg-2 py-3">
+                            <div class="row row-cols-1 row-cols-lg-2 py-3 py-lg-0">
                                 <div class="col pe-5">
                                     <p>
-                                        DuOS was developed in the Unity game engine and is targeted toward players who
-                                        have prior experience with puzzle games.
+                                        Lindolpho's Box of Ephemera was created for <a href="https://itch.io/jam/hidden-heroes-jam" class="text-decoration-none">IndieCade's Hidden Hero's Game Jam</a> back in <span class="fw-bold">February 2023</span>. I teamed up with my former USC classmate
+                                        <span class="fw-bold">Gabriela Purri Gomes</span> and her sister <span class="fw-bold">Giulia Purri Gomes</span> to create an interactive experience based on their great-grandfather, Lindolpho Espeschit.
                                     </p>
                                     <p>
-                                        It was Thomas Lu (Lead Designer & Engineer) and Greg Chen's (Art Director) joint
-                                        thesis project and was developed from fall 2016 through spring 2017. 
+                                        Born in 1896, Lindolpho was a journalist and writer from Brazil who published his first book and biography at the age of 98 years old, four years before his death at age 102. He was chosen for the rich stories and accounts he left behind in his book, and his great-granddaughters' wish to explore his legacy and the history of their German ancestors' migration to Brazil. While our main source of inspiration was his book, we also interviewed one of his last remaining daughters and explored a large archive of photos, footage and memorabilia different members of the family have kept along the years. 
                                     </p>
                                 </div>
                                 <div class="col">
@@ -199,75 +195,15 @@
                                     </a>
                                 </div>
                             </div>
-                        </div>
-
-                        <div id="designing-timed-puzzles" class="container my-3 py-3 border-bottom">
                             <div class="row">
-                                <h2> Designing Timed Puzzles </h2>
-                            </div>
-                            <div class="row row-cols-1 row-cols-lg-2 py-3">
                                 <div class="col">
                                     <p>
-                                        As a puzzle designer, me and the rest of the design team strived to create a sense of
-                                        flow as the player progressed through the levels. Juggling two characters can be
-                                        challenging for some, and therefore we had to make sure each timer was appropriately
-                                        placed so that completing the puzzle was not deemed impossible.
+                                        We all collaborated in designing this experience. As the point engineer on the team, I handled most of building the project in the <span class="fw-bold">Unity Game Engine</span> while my teammates gathered information on Lindolpho, created the assets, and handled the Portuguese translation used in the project. The most challenging part of this project was that we were spreadout across different countries and time zones. At the time Gabi was in Germany 🇩🇪, Giulia was in Portugal 🇵🇹, and I was in the United States 🇺🇸.
                                     </p>
                                     <p>
-                                        During each meeting, the other designers and I would first draft the puzzles out on the
-                                        white board. Once satisfied with the drafted design, one of us would volunteer to
-                                        implement it into Unity. Implementation of puzzles was quick since we each had prior
-                                        experience with the program and the necessary prefabs already defined in the project.
-                                        After that we would test the puzzle ourselves and make adjustments accordingly.
+                                        More information can be found on the <a href="https://kpustolski.itch.io/lindolphos-box-of-ephemera" class="text-decoration-none">itch.io</a> page.
                                     </p>
                                 </div>
-                                <div class="col">
-                                    <a href="../images/projects/duos/puzzle-design-01.gif" data-toggle="lightbox">
-                                        <img src="../images/projects/duos/puzzle-design-01.gif" class="img-fluid rounded" alt="puzzle-design-01.gif">
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div id="rite-test" class="container my-3 py-3">
-                            <div class="row">
-                                <h2> Rapid Iterative Testing and Evaluation Test</h2>
-                            </div>
-                            <div class="row row-cols-1 row-cols-lg-2 pt-3">
-                                <div class="col">
-                                    <p>
-                                        As the usability researcher on the team, I lead a Rapid Iterative Testing and Evaluation
-                                        (RITE) test to help improve the usability of the project. During this test, data was
-                                        collected from a total of fourteen playtests over a period of five weeks.
-                                    </p>
-                                    <p>
-                                        For each playtest session, the notes collected would be categorized into four problem categories:
-                                        <ul>
-                                            <li> <span class="fw-bold">Errors:</span> If the player does not perform the intended behavior.</li>
-                                            <li> <span class="fw-bold">Failures:</span> When a player encounters a problem that they cannot get past without the tester intervening.</li>
-                                            <li> <span class="fw-bold">Complaints:</span> Any frustrations spoken out loud.</li>
-                                            <li> <span class="fw-bold">Bugs:</span> Any design problems that the player may encounter that can affect their gameplay experience.</li>
-                                        </ul>
-                                    </p>
-                                </div>
-                                <div class="col">
-                                    <a href="../images/projects/duos/rite-test-01.png" data-toggle="lightbox">
-                                        <img src="../images/projects/duos/rite-test-01.png" class="img-fluid rounded" alt="rite-test-01.png">
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="row pt-lg-0 pt-3">
-                                <p>
-                                    Based on the results of the RITE study, the design team was able to iterate on the levels and create a better experience for the player.
-                                </p>
-                                <p>
-                                    The player was responsible for figuring out their own strategy for completing puzzles
-                                    and we saw a number of different methods during the RITE study. For example, a
-                                    number of players liked to record a character hitting the timers multiple times to make
-                                    sure they were triggered during playback even if they ran out of time. These players
-                                    eventually completed the levels, though this method resulted in a longer playtest time
-                                    than originally intended.
-                                </p>
                             </div>
                         </div>
                     </div>
