--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 </div>
                 <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-2 g-lg-3">
                     <div class="col">
-                        <a href="projects/stepstoneisland.html">
+                        <a href="projects/marvelsnap.html">
                             <div class="card shadow">
                                 <img src="images/thumbnails/thumbnail_projects_marvel_snap.png" class="card-img" alt="thumbnail_projects_marvel_snap.png">
                             </div>
