--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                         </a>
                     </div>
                     <div class="col">
-                        <a href="projects/stepstoneisland.html">
+                        <a href="projects/thearcana.html">
                             <div class="card shadow">
                                 <img src="images/thumbnails/thumbnail_projects_the_arcana.png" class="card-img" alt="thumbnail_projects_the_arcana.png">
                             </div>
