--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                         </a>
                     </div>
                     <div class="col">
-                        <a href="projects/stepstoneisland.html">
+                        <a href="projects/potionsplease.html">
                             <div class="card shadow">
                                 <img src="images/thumbnails/thumbnail_projects_potions_please.png" class="card-img" alt="thumbnail_projects_potions_please.png">
                             </div>
