--- a/projects/thearcana.html
+++ b/projects/thearcana.html
@@ -137,7 +137,7 @@
                             <div class="row py-3">
                                 <div class="col-md-6">
                                     <p class="lead">
-                                        Taking inspiration from tarot and otome style love stories, The Arcana is a mobile interactive visual novel where players are the main character and choose one of six characters to romance throughout the main story.
+                                        Taking inspiration from tarot and otome style love stories, The Arcana is a mobile interactive visual novel where players play as the main character and choose one of six characters to romance throughout the main story.
                                     </p>
                                     <p>
                                         The Arcana was initially developed by a company called Nix Hydra, but is now owned and maintained by <a href="https://home.dorian.live/" class="text-decoration-none">Dorian.live</a>.
