--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                         </a>
                     </div>
                     <div class="col">
-                        <a href="projects/stepstoneisland.html">
+                        <a href="projects/fictif.html">
                             <div class="card shadow">
                                 <img src="images/thumbnails/thumbnail_projects_fictif.png" class="card-img" alt="thumbnail_projects_fictif.png">
                             </div>
