update marvel snap image to float-end

--- a/projects/marvelsnap.html
+++ b/projects/marvelsnap.html
@@ -150,7 +150,7 @@
                                 </div>
                                 <div class="col">
                                     <a href="../images/projects/marvelsnap/gallery_01.png" data-toggle="lightbox">
-                                        <img src="../images/projects/marvelsnap/gallery_01.png" class="img-fluid mx-auto d-block rounded" alt="gallery_01.png" width="400px"/>
+                                        <img src="../images/projects/marvelsnap/gallery_01.png" class="img-fluid mx-auto d-block rounded float-end" alt="gallery_01.png" width="400px"/>
                                     </a>
                                 </div>
                             </div>
