Updated the arcana - reverted back to how it was prior to two commits ago

--- a/projects/thearcana.html
+++ b/projects/thearcana.html
@@ -135,7 +135,7 @@
                                 </div>
                             </div>
                             <div class="row py-3">
-                                <div class="col-lg-7">
+                                <div class="col-lg-6">
                                     <p class="lead">
                                         Taking inspiration from tarot and otome style love stories, The Arcana is a mobile interactive visual novel where players play as the main character and choose one of six characters to romance throughout the main story.
                                     </p>
@@ -143,9 +143,9 @@
                                         The Arcana was initially developed by a company called Nix Hydra, but is now owned and maintained by <a href="https://home.dorian.live/" class="text-decoration-none">Dorian.live</a>.
                                     </p>
                                 </div>
-                                <div class="col-lg-5">
+                                <div class="col">
                                     <a href="../images/projects/thearcana/gallery_01.png" data-toggle="lightbox">
-                                        <img src="../images/projects/thearcana/gallery_01.png" class="img-fluid mx-auto d-block rounded float-lg-end" alt="gallery_01.png" width="375"/>
+                                        <img src="../images/projects/thearcana/gallery_01.png" class="img-fluid mx-auto d-block rounded float-lg-end" alt="gallery_01.png"/>
                                     </a>
                                 </div>
                             </div>
