--- a/projects/fictif.html
+++ b/projects/fictif.html
@@ -137,42 +137,40 @@
                             <div class="row py-3">
                                 <div class="col-md-6">
                                     <p class="lead">
-                                        Potions Please! was a narrative based adventure game where the player acted as an apprentice to a traveling potion maker.
-                                        The gameplay focused around collecting ingredients through mini games and progressing the narrative by brewing potions
-                                        for the townfolk in various locations.
+                                        Fictif is a collection of otomie inspired interactive visual novels. Similar to <a href="thearcana.html" class="text-decoration-none">The Arcana</a>, players play as the main character and choose which character they like to romance throughout each story.
                                     </p>
                                     <p>
-                                        Potions Please! had a limited release and unfortunetly was shelved before it was fully released prior to Nix Hydra's acquisition by <a href="https://home.dorian.live/" class="text-decoration-none">Dorian.live</a>.
+                                        Fictif was initially developed by a company called Nix Hydra, but is now owned and maintained by <a href="https://home.dorian.live/" class="text-decoration-none">Dorian.live</a>.
                                     </p>
                                 </div>
                                 <div class="col">
-                                    <a href="../images/projects/potionsplease/gallery_01.png" data-toggle="lightbox">
-                                        <img src="../images/projects/potionsplease/gallery_01.png" class="img-fluid mx-auto d-block rounded" alt="gallery_01.png"/>
+                                    <a href="../images/projects/fictif/gallery_01.png" data-toggle="lightbox">
+                                        <img src="../images/projects/fictif/thumbnails/thumbnail_gallery_01.png" class="img-fluid mx-auto d-block rounded" alt="thumbnail_gallery_01.png"/>
                                     </a>
                                 </div>
                             </div>
                             
                             <div class="row row-cols-2 row-cols-lg-4 g-2 g-lg-3 pt-4 pb-5">
                                 <div class="col">
-                                    <a href="../images/projects/potionsplease/gallery_02.png" data-toggle="lightbox" data-gallery="main-gallery">
-                                        <img src="../images/projects/potionsplease/thumbnails/thumbnail_gallery_02.png" class="img-fluid mx-auto d-block rounded" alt="thumbnail_gallery_02.png"/>
+                                    <a href="../images/projects/fictif/gallery_02.png" data-toggle="lightbox" data-gallery="main-gallery">
+                                        <img src="../images/projects/fictif/thumbnails/thumbnail_gallery_02.png" class="img-fluid mx-auto d-block rounded" alt="thumbnail_gallery_02.png"/>
                                     </a>
                                 </div>
                                 <div class="col">
-                                    <a href="../images/projects/potionsplease/gallery_04.png" data-toggle="lightbox" data-gallery="main-gallery">
-                                        <img src="../images/projects/potionsplease/thumbnails/thumbnail_gallery_04.png" class="img-fluid mx-auto d-block rounded" alt="thumbnail_gallery_03.png"/>
+                                    <a href="../images/projects/fictif/gallery_03.png" data-toggle="lightbox" data-gallery="main-gallery">
+                                        <img src="../images/projects/fictif/thumbnails/thumbnail_gallery_03.png" class="img-fluid mx-auto d-block rounded" alt="thumbnail_gallery_03.png"/>
                                     </a>
                                 </div>
                                 <div class="col">
-                                    <a href="../images/projects/potionsplease/gallery_05.png" data-toggle="lightbox" data-gallery="main-gallery">
-                                        <img src="../images/projects/potionsplease/thumbnails/thumbnail_gallery_05.png" class="img-fluid mx-auto d-block rounded" alt="thumbnail_gallery_04.png"/>
+                                        <a href="../images/projects/fictif/gallery_05.png" data-toggle="lightbox" data-gallery="main-gallery">
+                                        <img src="../images/projects/fictif/thumbnails/thumbnail_gallery_05.png" class="img-fluid mx-auto d-block rounded" alt="thumbnail_gallery_05.png"/>
+                                    </a>
+                                </div>
+                                <div class="col">
+                                    <a href="../images/projects/fictif/gallery_04.png" data-toggle="lightbox" data-gallery="main-gallery">
+                                        <img src="../images/projects/fictif/thumbnails/thumbnail_gallery_04.png" class="img-fluid mx-auto d-block rounded" alt="thumbnail_gallery_04.png"/>
                                     </a>
 
-                                </div>
-                                <div class="col">
-                                        <a href="../images/projects/potionsplease/gallery_03.png" data-toggle="lightbox" data-gallery="main-gallery">
-                                        <img src="../images/projects/potionsplease/thumbnails/thumbnail_gallery_03.png" class="img-fluid mx-auto d-block rounded" alt="thumbnail_gallery_05.png"/>
-                                    </a>
                                 </div>
                             </div>
                         </div>
