--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <div class="container my-5">
                 <div class="row row-cols-1 pb-3">
                     <h1>Personal Projects</h1>
-                    <h3 class="text-body-secondary fw-light fst-italic ">Old student projects, game jam games, etc.</h3>
+                    <h3 class="text-body-secondary fw-light fst-italic ">A curated list of old student projects, game jam games, etc.</h3>
                 </div>
                 <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-2 g-lg-3">
                     <div class="col">
