--- a/projects/marvelsnap.html
+++ b/projects/marvelsnap.html
@@ -142,15 +142,12 @@
                                         two out of the three locations on the board.
                                     </p>
                                     <p>
-                                        As a live service game, Snap also includes a variety of meta-game features including a shop, limited time game modes, and a mission system.
-                                    </p>
-                                    <p>
                                         More information on the game can be found at <a href="https://marvelsnap.com/" class="text-decoration-none">https://marvelsnap.com/</a>.
                                     </p>
                                 </div>
                                 <div class="col">
                                     <a href="../images/projects/marvelsnap/gallery_01.png" data-toggle="lightbox">
-                                        <img src="../images/projects/marvelsnap/gallery_01.png" class="img-fluid mx-auto d-block rounded float-end" alt="gallery_01.png" width="400px"/>
+                                        <img src="../images/projects/marvelsnap/thumbnails/thumbnail_gallery_01.png" class="img-fluid mx-auto d-block rounded float-end" alt="thumbnail_gallery_01.png"/>
                                     </a>
                                 </div>
                             </div>
