Added project navigation below head on each page

--- a/projects/discobear.html
+++ b/projects/discobear.html
@@ -36,6 +36,12 @@
             <symbol id="sun-fill" viewBox="0 0 16 16"> 
                 <path d="M8 12a4 4 0 1 0 0-8 4 4 0 0 0 0 8zM8 0a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 0zm0 13a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 13zm8-5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2a.5.5 0 0 1 .5.5zM3 8a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2A.5.5 0 0 1 3 8zm10.657-5.657a.5.5 0 0 1 0 .707l-1.414 1.415a.5.5 0 1 1-.707-.708l1.414-1.414a.5.5 0 0 1 .707 0zm-9.193 9.193a.5.5 0 0 1 0 .707L3.05 13.657a.5.5 0 0 1-.707-.707l1.414-1.414a.5.5 0 0 1 .707 0zm9.193 2.121a.5.5 0 0 1-.707 0l-1.414-1.414a.5.5 0 0 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .707zM4.464 4.465a.5.5 0 0 1-.707 0L2.343 3.05a.5.5 0 1 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .708z"></path> 
             </symbol>
+            <symbol id="arrow-right-circle" viewBox="0 0 16 16"> 
+                <path fill-rule="evenodd" d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8m15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0M4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5z"/>
+            </symbol>
+            <symbol id="arrow-left-circle" viewBox="0 0 16 16"> 
+                <path fill-rule="evenodd" d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8m15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0m-4.5-.5a.5.5 0 0 1 0 1H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5z"/>
+            </symbol>
         </svg>
 
         <!-- Navigation -->
@@ -110,6 +116,31 @@
                     </div>
                 </nav>
             </header>
+            <!-- Project Navigation -->
+            <div class="container-fluid">
+                <div class="d-flex justify-content-between">
+                    <div>
+                        <a class="fs-4 text-decoration-none me-md-auto" href="stepstoneisland.html">
+                            <span class="icon-link">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-controller" viewBox="0 0 16 16">
+                                <use href="#arrow-left-circle"></use>
+                            </svg>
+                            Stepstone Island
+                            </span>
+                        </a>
+                    </div>
+                    <div>
+                        <a class="fs-4 text-decoration-none me-md-auto" href="duos.html">
+                            <span class="icon-link">
+                            DuOS
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-controller" viewBox="0 0 16 16">
+                                <use href="#arrow-right-circle"></use>
+                            </svg>
+                            </span>
+                        </a>
+                    </div>
+                </div>
+            </div>
         </div>
 
       <!-- Body -->
